k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <namespace>
  labels:
    name: <namespace>
    environment: <environment>
